--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,17 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.0"
+    },
+    "extra": {
+        "laravel": {
+            "provider": [
+                "Rainsens\\Dinglog\\Providers\\DinglogServiceProvider"
+            ],
+            "aliases": {
+                "Dinglog": "Rainsens\\Dinglog\\Facades\\Dinglog"
+            }
+        }
     }
 }
