--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "email": "yusen@rainsen.com"
         }
     ],
+    "require": {
+        "php": ">=7.0.0",
+        "laravel/framework": ">=5.5",
+        "alibabacloud/dingtalk": "^1.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "orchestra/testbench": "^6.0"
