--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "ext-json": "*",
+        "ext-bcmath": "*",
+        "php": ">=7.1.0",
         "laravel/framework": ">=5.5",
         "alibabacloud/dingtalk": "^1.3"
     },
@@ -30,7 +32,7 @@
     },
     "extra": {
         "laravel": {
-            "provider": [
+            "providers": [
                 "Rainsens\\Dinglog\\Providers\\DinglogServiceProvider"
             ],
             "aliases": {
